# duckdb-osmium

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sh  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: osmium_extension.cpp
src/include/: osmium_extension.hpp
test/data/: bainbridge.osm
test/sql/: basic.test  kind_filter.test  projection.test  relations.test  tag_pushdown.test
